connect mongodb and create signupUser resolver

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "graphql": "^14.1.1",
     "graphql-server-express": "^1.4.0",
     "graphql-tools": "^4.0.4",
+    "mongoose": "^5.4.18",
     "nodemon": "^1.18.10"
   }
 }
