--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "graphql-tag": "^2.10.1",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
+    "react-ckeditor-component": "^1.1.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
