--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "apollo-link-context": "^1.0.15",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-ckeditor-component": "^1.1.0",
